bab-07g-kudemo-postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kudemo-postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      containers:
      - name: postgres
        image: ngoprek/kudemo-todo-postgres
        ports:
        - containerPort: 5432
