bab-11b-kudemo-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kudemo-api-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: api
  template:
    metadata:
      labels:
        component: api
    spec:
      containers:
      - name: api
        image: ngoprek/kudemo-todo-api
        ports:
        - containerPort: 8080
