bab-10a-ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: kudemo-todo-ui-cluster-ip-service
            port:
              number: 80
      - path: /api/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: api-load-balancer-service
            port:
              number: 8080
